--- a/front-end/apps/taskmaster-angular/project.json
+++ b/front-end/apps/taskmaster-angular/project.json
@@ -1,26 +1,26 @@
 {
-  "name": "taskmaster",
+  "name": "taskmaster-angular",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
-  "sourceRoot": "apps/taskmaster/src",
+  "sourceRoot": "apps/taskmaster-angular/src",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/taskmaster",
-        "index": "apps/taskmaster/src/index.html",
-        "browser": "apps/taskmaster/src/main.ts",
+        "outputPath": "dist/apps/taskmaster-angular",
+        "index": "apps/taskmaster-angular/src/index.html",
+        "browser": "apps/taskmaster-angular/src/main.ts",
         "polyfills": ["zone.js"],
-        "tsConfig": "apps/taskmaster/tsconfig.app.json",
+        "tsConfig": "apps/taskmaster-angular/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
-          "apps/taskmaster/src/favicon.ico",
-          "apps/taskmaster/src/assets"
+          "apps/taskmaster-angular/src/favicon.ico",
+          "apps/taskmaster-angular/src/assets"
         ],
-        "styles": ["apps/taskmaster/src/styles.scss"],
+        "styles": ["apps/taskmaster-angular/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -51,10 +51,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "taskmaster:build:production"
+          "buildTarget": "taskmaster-angular:build:production"
         },
         "development": {
-          "buildTarget": "taskmaster:build:development"
+          "buildTarget": "taskmaster-angular:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -62,7 +62,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "taskmaster:build"
+        "buildTarget": "taskmaster-angular:build"
       }
     },
     "lint": {
@@ -72,15 +72,15 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/taskmaster/jest.config.ts"
+        "jestConfig": "apps/taskmaster-angular/jest.config.ts"
       }
     },
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "taskmaster:build",
+        "buildTarget": "taskmaster-angular:build",
         "port": 4200,
-        "staticFilePath": "dist/apps/taskmaster/browser",
+        "staticFilePath": "dist/apps/taskmaster-angular/browser",
         "spa": true
       }
     }
