--- a/front-end/apps/taskmaster-angular/.eslintrc.json
+++ b/front-end/apps/taskmaster-angular/.eslintrc.json
@@ -24,7 +24,9 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "@typescript-eslint/no-inferrable-types": "off",
+        "@typescript-eslint/no-empty-interface": "off"
       }
     },
     {
