--- a/middleware/spring-boot/build.gradle
+++ b/middleware/spring-boot/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.11-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'com.gradleup.shadow' version '8.3.6'
 }
 
 group = 'com.andredavcev'
