--- a/middleware/spring-boot/build.gradle
+++ b/middleware/spring-boot/build.gradle
@@ -43,3 +43,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.andredavcev.taskmaster.TaskmasterApplication'
+	}
+}
