Add scripts to package.json

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,7 +2,13 @@
   "name": "@angular/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "postgres-create": "docker run --name docker-postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=postgres -d postgres",
+    "postgres-start": "docker start docker-postgres",
+    "postgres-stop": "docker stop docker-postgres",
+    "boot-run": "cd ../middleware/spring-boot && ./gradlew bootRun",
+    "angular-serve": "npx nx serve taskmaster-angular"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.3.0",
