Add package and run tasks to api

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,6 +7,8 @@
     "postgres-start": "docker start docker-postgres",
     "postgres-stop": "docker stop docker-postgres",
     "boot-run": "cd ../middleware/spring-boot && ./gradlew bootRun",
+    "boot-package": "cd ../middleware/spring-boot && ./gradlew shadowJar",
+    "java-run": "java -jar ../middleware/spring-boot/build/libs/taskmaster-0.0.1-SNAPSHOT-all.jar",
     "angular-serve": "npx nx serve taskmaster-angular"
   },
   "private": true,
