--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "postgres-create": "docker run --name docker-postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=postgres -d postgres",
+    "postgres-download": "docker run --name docker-postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=postgres -d postgres",
     "postgres-start": "docker start docker-postgres",
     "postgres-stop": "docker stop docker-postgres",
     "boot-run": "cd ../middleware/spring-boot && ./gradlew bootRun",
