Add env file & shell commands

--- a/middleware/spring-boot/Dockerfile
+++ b/middleware/spring-boot/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /app
 
 COPY build/libs/*.jar app.jar
 
-# RUN addgroup --system spring
-# RUN adduser -S -s /bin/false -G spring spring
-# RUN chown -R spring:spring /application
-# USER spring
+RUN addgroup --system spring
+RUN adduser -S -s /bin/false -G spring spring
+RUN chown -R spring:spring /application
+USER spring
 
 EXPOSE 8080
 
