--- a/middleware/spring-boot/docker-compose.yml
+++ b/middleware/spring-boot/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 services:
   db:
     image: postgres
+    container_name: taskmaster-db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -10,6 +11,7 @@ services:
       - "5432:5432"
   app:
     image: taskmaster-spring-boot
+    container_name: taskmaster-api
     ports:
       - "8080:8080"
     depends_on:
