--- a/middleware/spring-boot/build.gradle
+++ b/middleware/spring-boot/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+	id 'application'
 	id 'java'
 	id 'org.springframework.boot' version '3.3.11-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.7'
@@ -6,12 +7,16 @@ plugins {
 }
 
 group = 'com.andredavcev'
-version = '0.0.1'
+version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
+}
+
+application {
+	mainClass = 'com.andredavcev.taskmaster.TaskmasterApplication'
 }
 
 configurations {
@@ -43,10 +48,4 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
-}
-
-jar {
-	manifest {
-		attributes 'Main-Class': 'com.andredavcev.taskmaster.TaskmasterApplication'
-	}
 }
