Remove shadow Jar

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,9 @@
     "postgres-start": "docker start docker-postgres",
     "postgres-stop": "docker stop docker-postgres",
     "boot-run": "cd ../middleware/spring-boot && ./gradlew bootRun",
-    "boot-package": "cd ../middleware/spring-boot && ./gradlew shadowJar",
+    "boot-run-jar": "java -jar ../middleware/spring-boot/build/libs/*.jar",
+    "boot-package": "cd ../middleware/spring-boot && ./gradlew bootJar",
     "boot-image": "cd ../middleware/spring-boot && docker build -t taskmaster-spring-boot .",
-    "boot-java-run": "java -jar ../middleware/spring-boot/build/libs/*.jar",
     "angular-serve": "npx nx serve taskmaster-angular",
     "docker-run": "cd ../docker && docker-compose --env-file .env-local up -d",
     "docker-stop": "cd ../docker && docker-compose down",
