--- a/middleware/spring-boot/Dockerfile
+++ b/middleware/spring-boot/Dockerfile
@@ -1,9 +1,13 @@
-FROM eclipse-temurin:21-jre-alpine
-
+# Stage 1: Build the Java app
+FROM gradle:jdk21-alpine as build
 WORKDIR /app
+COPY . .
+RUN ./gradlew bootJar
 
-COPY build/libs/*.jar app.jar
-
+# Stage 2: Run the API
+FROM eclipse-temurin:21-jre-alpine
+WORKDIR /app
+COPY --from=build /app/build/libs/*.jar app.jar
 RUN addgroup --system spring
 RUN adduser -S -s /bin/false -G spring spring
 RUN chown -R spring:spring /app
