--- a/middleware/spring-boot/src/main/resources/application.yml
+++ b/middleware/spring-boot/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
   # Connect to Docker Postgres image
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres
+    # url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://db:5432/postgres
     username: postgres
     password: postgres
 
