--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,7 +7,8 @@ http {
 
   server {
     listen 80;
-    server_name host.docker.internal;
+    server_name localhost;
+    # server_name host.docker.internal;
 
     root /usr/share/nginx/html;
 
