--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,10 @@
     "postgres-download": "docker run --name docker-postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=postgres -d postgres",
     "postgres-start": "docker start docker-postgres",
     "postgres-stop": "docker stop docker-postgres",
-    "boot-run": "cd ../middleware/spring-boot && ./gradlew bootRun",
-    "boot-run-jar": "java -jar ../middleware/spring-boot/build/libs/*.jar",
-    "boot-package": "cd ../middleware/spring-boot && ./gradlew bootJar",
-    "boot-image": "cd ../middleware/spring-boot && docker build -t taskmaster-spring-boot .",
+    "boot-run": "cd ../middleware/taskmaster && ./gradlew bootRun",
+    "boot-run-jar": "java -jar ../middleware/taskmaster/build/libs/*.jar",
+    "boot-package": "cd ../middleware/taskmaster && ./gradlew bootJar",
+    "boot-image": "cd ../middleware/taskmaster && docker build -t taskmaster-spring-boot .",
     "angular-serve": "npx nx serve taskmaster-angular",
     "docker-build": "cd ../docker && docker compose build",
     "docker-run": "cd ../docker && docker-compose --env-file .env-local up -d",
