--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,55 +20,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.3.0",
-    "@angular/common": "~17.3.0",
-    "@angular/compiler": "~17.3.0",
-    "@angular/core": "~17.3.0",
-    "@angular/forms": "~17.3.0",
-    "@angular/platform-browser": "~17.3.0",
-    "@angular/platform-browser-dynamic": "~17.3.0",
-    "@angular/router": "~17.3.0",
-    "@nx/angular": "18.3.2",
+    "@angular/animations": "20.1.3",
+    "@angular/common": "20.1.3",
+    "@angular/compiler": "20.1.3",
+    "@angular/core": "20.1.3",
+    "@angular/forms": "20.1.3",
+    "@angular/platform-browser": "20.1.3",
+    "@angular/platform-browser-dynamic": "20.1.3",
+    "@angular/router": "20.1.3",
+    "@nx/angular": "21.3.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.3.0",
-    "@angular-devkit/core": "~17.3.0",
-    "@angular-devkit/schematics": "~17.3.0",
-    "@angular-eslint/eslint-plugin": "~17.3.0",
-    "@angular-eslint/eslint-plugin-template": "~17.3.0",
-    "@angular-eslint/template-parser": "~17.3.0",
-    "@angular/cli": "~17.3.0",
-    "@angular/compiler-cli": "~17.3.0",
-    "@angular/language-service": "~17.3.0",
-    "@nx/cypress": "18.3.2",
-    "@nx/eslint": "18.3.2",
-    "@nx/eslint-plugin": "18.3.2",
-    "@nx/jest": "18.3.2",
-    "@nx/js": "18.3.2",
-    "@nx/web": "18.3.2",
-    "@nx/workspace": "18.3.2",
-    "@schematics/angular": "~17.3.0",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
-    "@types/jest": "^29.4.0",
+    "@angular-devkit/build-angular": "20.1.3",
+    "@angular-devkit/core": "20.1.3",
+    "@angular-devkit/schematics": "20.1.3",
+    "@angular-eslint/eslint-plugin": "20.1.1",
+    "@angular-eslint/eslint-plugin-template": "20.1.1",
+    "@angular-eslint/template-parser": "20.1.1",
+    "@angular/compiler-cli": "20.1.3",
+    "@angular/language-service": "20.1.3",
+    "@nx/cypress": "21.3.9",
+    "@nx/eslint": "21.3.9",
+    "@nx/eslint-plugin": "21.3.9",
+    "@nx/jest": "21.3.9",
+    "@nx/js": "21.3.9",
+    "@nx/web": "21.3.9",
+    "@nx/workspace": "21.3.9",
+    "@schematics/angular": "20.1.3",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.17",
+    "@types/jest": "30.0.0",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.3.0",
-    "@typescript-eslint/parser": "^7.3.0",
-    "cypress": "^13.6.6",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "cypress": "14.5.3",
     "eslint": "~8.57.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-cypress": "^2.13.4",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "30.0.5",
+    "jest-environment-jsdom": "30.0.5",
     "jest-preset-angular": "~14.0.3",
-    "nx": "18.3.2",
+    "nx": "21.3.9",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.4.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2"
+    "typescript": "5.8.3",
+    "jest-util": "30.0.5"
   }
 }
