--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -39,4 +39,7 @@ testem.log
 Thumbs.db
 
 .nx/cache
+.nx/workspace-data
 .angular
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
