--- a/frontend/apps/taskmaster-angular/.eslintrc.json
+++ b/frontend/apps/taskmaster-angular/.eslintrc.json
@@ -26,7 +26,8 @@
           }
         ],
         "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/no-empty-interface": "off"
+        "@typescript-eslint/no-empty-interface": "off",
+        "@angular-eslint/prefer-standalone": "off"
       }
     },
     {
