--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "^7.16.0",
     "cypress": "14.5.3",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "10.1.8",
@@ -64,11 +65,11 @@
     "jest": "30.0.5",
     "jest-environment-jsdom": "30.0.5",
     "jest-preset-angular": "~14.0.3",
+    "jest-util": "30.0.5",
     "nx": "21.3.9",
     "prettier": "^2.6.2",
     "ts-jest": "29.4.0",
     "ts-node": "10.9.1",
-    "typescript": "5.8.3",
-    "jest-util": "30.0.5"
+    "typescript": "5.8.3"
   }
 }
