--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   db:
     image: postgres
@@ -9,7 +8,7 @@ services:
       POSTGRES_DB: postgres
     ports:
       - "5432:5432"
-    volumes: # Optional: Presist data
+    volumes: # Optional: Persist data
       - db_data:/var/lib/postgresql/data
 
   api:
