--- a/middleware/taskmaster/Dockerfile
+++ b/middleware/taskmaster/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the Java app
-FROM gradle:jdk21-alpine as build
+FROM gradle:jdk21-alpine AS build
 WORKDIR /app
 COPY . .
 RUN ./gradlew bootJar
