--- a/frontend/nx.json
+++ b/frontend/nx.json
@@ -47,6 +47,11 @@
     },
     "e2e-ci--**/**": {
       "dependsOn": ["^taskmaster-angular:build"]
+    },
+    "@angular/build:application": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   },
   "plugins": [
