--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@angular-eslint/eslint-plugin": "20.1.1",
     "@angular-eslint/eslint-plugin-template": "20.1.1",
     "@angular-eslint/template-parser": "20.1.1",
+    "@angular/build": "20.1.3",
     "@angular/cli": "20.1.3",
     "@angular/compiler-cli": "20.1.3",
     "@angular/language-service": "20.1.3",
@@ -59,16 +60,19 @@
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "@typescript-eslint/utils": "^7.16.0",
+    "autoprefixer": "^10.4.0",
     "cypress": "14.5.3",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-cypress": "^3.5.0",
     "jest": "30.0.5",
     "jest-environment-jsdom": "30.0.5",
     "jest-preset-angular": "~14.0.3",
     "jest-util": "30.0.5",
     "nx": "21.3.9",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "29.4.0",
     "ts-node": "10.9.1",
     "typescript": "5.8.3"
