--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "postgres-download": "docker run --name docker-postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=postgres -d postgres",
     "postgres-start": "docker start docker-postgres",
     "postgres-stop": "docker stop docker-postgres",
-    "taskmaster-boot-run": "cd apps/taskmaster-java && ./gradlew bootRun",
+    "taskmaster-boot-run": "npx nx run taskmaster-java:bootRun",
     "taskmaster-boot-run-jar": "java -jar apps/taskmaster-java/build/libs/*.jar",
-    "taskmaster-boot-package": "cd apps/taskmaster-java && ./gradlew bootJar",
+    "taskmaster-boot-package": "npx nx run taskmaster-java:bootJar",
     "taskmaster-boot-image": "cd apps/taskmaster-java && docker build -t taskmaster-spring-boot .",
     "taskmaster-angular-serve": "npx nx serve taskmaster-angular",
     "taskmaster-docker-build": "docker compose -f docker/taskmaster/docker-compose.yml build",
@@ -47,6 +47,7 @@
     "@nx/cypress": "21.3.9",
     "@nx/eslint": "21.3.9",
     "@nx/eslint-plugin": "21.3.9",
+    "@nx/gradle": "^21.3.9",
     "@nx/jest": "21.3.9",
     "@nx/js": "21.3.9",
     "@nx/web": "21.3.9",
