--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nx/cypress": "21.3.9",
     "@nx/eslint": "21.3.9",
     "@nx/eslint-plugin": "21.3.9",
+    "@nx/gradle": "^21.3.9",
     "@nx/jest": "21.3.9",
     "@nx/js": "21.3.9",
     "@nx/web": "21.3.9",
