--- a/package.json
+++ b/package.json
@@ -6,6 +6,22 @@
     "postgres-download": "docker run --name docker-postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=postgres -d postgres",
     "postgres-start": "docker start docker-postgres",
     "postgres-stop": "docker stop docker-postgres",
+    "all:test": "npx nx run-many --target=test --coverage",
+    "all:format": "npx nx format:write",
+    "all:format:write": "npx nx format:write",
+    "all:format:check": "npx nx format:check",
+    "all:dep-graph": "npx nx dep-graph",
+    "affected:apps": "npx nx affected:apps",
+    "affected:libs": "npx nx affected:libs",
+    "affected:build": "npx nx affected:build",
+    "affected:e2e": "npx nx affected:e2e",
+    "affected:test": "npx nx affected:test",
+    "affected:lint": "npx nx affected:lint",
+    "affected:dep-graph": "npx nx affected:dep-graph",
+    "fantasia-angular-serve": "npx nx serve fantasia-angular",
+    "fantasia-angular-build": "npx nx build fantasia-angular",
+    "fantasia-angular-lint": "npx nx workspace-lint && npx nx lint fantasia-angular",
+    "fantasia-angular-e2e": "npx nx fantasia-angular-e2e",
     "taskmaster-boot-run": "npx nx run taskmaster-java:bootRun",
     "taskmaster-boot-run-jar": "java -jar apps/taskmaster-java/build/libs/*.jar",
     "taskmaster-boot-package": "npx nx run taskmaster-java:bootJar",
@@ -16,19 +32,32 @@
     "taskmaster-docker-stop": "cd docker/taskmaster && docker compose down",
     "taskmaster-docker-shell-api": "docker exec -it taskmaster-api sh",
     "taskmaster-docker-shell-db": "docker exec -it taskmaster-db sh",
-    "taskmaster-docker-shell-fe": "docker exec -it taskmaster-fe sh"
+    "taskmaster-docker-shell-fe": "docker exec -it taskmaster-fe sh",
+    "npm:outdated": "npm outdated",
+    "nx:update": "npx nx migrate latest",
+    "nx:update:check": "npx nx migrate",
+    "nx:help": "npx nx help"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "20.1.3",
+    "@angular/cdk": "20.1.7",
     "@angular/common": "20.1.3",
     "@angular/compiler": "20.1.3",
     "@angular/core": "20.1.3",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "20.1.3",
+    "@angular/material": "20.1.7",
     "@angular/platform-browser": "20.1.3",
     "@angular/platform-browser-dynamic": "20.1.3",
     "@angular/router": "20.1.3",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
+    "@ngxs/devtools-plugin": "^20.1.0",
+    "@ngxs/router-plugin": "^20.1.0",
+    "@ngxs/store": "^20.1.0",
     "@nx/angular": "21.3.9",
+    "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "0.15.1"
@@ -44,6 +73,7 @@
     "@angular/cli": "20.1.3",
     "@angular/compiler-cli": "20.1.3",
     "@angular/language-service": "20.1.3",
+    "@ngneat/spectator": "^21.0.1",
     "@nx/cypress": "21.3.9",
     "@nx/eslint": "21.3.9",
     "@nx/eslint-plugin": "21.3.9",
@@ -66,10 +96,13 @@
     "eslint": "~8.57.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-cypress": "^3.5.0",
+    "firebase-tools": "^14.15.1",
     "jest": "30.0.5",
     "jest-environment-jsdom": "30.0.5",
     "jest-preset-angular": "~14.0.3",
     "jest-util": "30.0.5",
+    "ng-mocks": "^14.13.5",
+    "ng-packagr": "20.1.0",
     "nx": "21.3.9",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
