--- a/.github/workflows/nx-ci.yml
+++ b/.github/workflows/nx-ci.yml
@@ -32,7 +32,7 @@ jobs:
           cache: 'npm'
 
       - name: Install npm dependencies
-        run: npm i
+        run: npm ci
 
       - name: Run npm audit for high level vulnerabilities
         run: npm audit --omit=dev --audit-level high
