--- a/.github/workflows/nx-ci.yml
+++ b/.github/workflows/nx-ci.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Install npm dependencies
         run: npm ci
+        env:
+          CYPRESS_INSTALL_BINARY: 0
 
       - name: Run npm audit for high level vulnerabilities
         run: npm audit --omit=dev --audit-level high
