Update entrypoint permissions

--- a/.github/actions/downmerge/Dockerfile
+++ b/.github/actions/downmerge/Dockerfile
@@ -6,6 +6,7 @@ RUN apk add --no-cache bash
 
 # Copy shell to container
 COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 # Run entrypoint script
 ENTRYPOINT ["/entrypoint.sh"]
