Add git config to downmerge action

--- a/.github/actions/downmerge/Dockerfile
+++ b/.github/actions/downmerge/Dockerfile
@@ -6,7 +6,10 @@ RUN apk add --no-cache bash
 
 # Copy shell to container
 COPY entrypoint.sh /entrypoint.sh
+
+# Config
 RUN chmod +x /entrypoint.sh
+RUN git config --global --add safe.directory /github/workspace
 
 # Run entrypoint script
 ENTRYPOINT ["/entrypoint.sh"]
