Add new scripts to package.json

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "postgres-download": "docker run --name docker-postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=postgres -d postgres",
     "postgres-start": "docker start docker-postgres",
     "postgres-stop": "docker stop docker-postgres",
-    "all:test": "npx nx run-many --target=test --coverage",
     "all:format": "npx nx format:write",
     "all:format:write": "npx nx format:write",
     "all:format:check": "npx nx format:check",
+    "all:lint": "npx nx run-many --target=lint",
+    "all:test": "npx nx run-many --target=test --coverage",
+    "all:e2e": "npx nx run-many --target=e2e",
+    "all:build": "npx nx run-many --target=build",
     "all:dep-graph": "npx nx dep-graph",
     "affected:apps": "npx nx affected:apps",
     "affected:libs": "npx nx affected:libs",
@@ -35,6 +38,7 @@
     "taskmaster-docker-shell-db": "docker exec -it taskmaster-db sh",
     "taskmaster-docker-shell-fe": "docker exec -it taskmaster-fe sh",
     "npm:outdated": "npm outdated",
+    "npm:audit": "npm audit --omit=dev --audit-level high",
     "nx:update": "npx nx migrate latest",
     "nx:update:check": "npx nx migrate",
     "nx:help": "npx nx help"
